@@ -64,6 +64,7 @@ function tut.reset ()
    var.pop( "tut_launcher" )
    var.pop( "tut_fighterbay" )
    var.pop( "tut_turret" )
+   var.pop( "tut_pd" )
    var.pop( "tut_lic_lightcom" )
    var.pop( "tut_lic_largeciv" )
    var.pop( "tut_lic_medweap" )
