@@ -24,6 +24,7 @@
    * Show tracking icons for non-turret bolt weapons too
    * More short names for weapon outfits
    * Fixed pilot.setSpeedLimit not working
+   * Added tutorial message when player acquires first point defense weapon
    * `test_of_renewal`: fixed weapon set defaults being incorrect and increased enemy damage
    * `seek_n_destroy`: missions should work properly when boarding the target
    * `flf_diversion`, `flf_rogue`: Missions should no longer be able to have ridiculously low credit rewards
